# nodejs_coverage_bug

./: .bazelrc  README.md  WORKSPACE  package.json
test1/: BUILD.bazel  main.test.ts  tsconfig.json
test2/blah/: main.test.ts  tsconfig.json
